# fridare

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: pypi-publish.yml
fridare/: __init__.py  builtins.py  server.py  session.py
fridare/scripts/: cert_dump.js  ssl_capture.js  ssl_unpin.js
