[project]
name = "fridare"
version = "0.1.0"
description = "Fridare — Interactive Android RE through Frida x MCP"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Myuri_Kanao" },
]
keywords = ["frida", "mcp", "android", "reverse-engineering", "security"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Debuggers",
]
dependencies = [
    "frida",
    "frida-tools",
    "mcp[cli]>=1.0.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[project.scripts]
fridare = "fridare.server:main"

[project.urls]
Repository = "https://github.com/MyuriKanao/fridare"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
